2005-07-13  Ross Burton  <ross@burtonini.com>

	* data/sj-play.png:
	* data/sj-record.png:
	* data/Makefile.am:
	New icons.  The play icon is taken from Totem, and the record icon
	is by Luca Cavalli (and should probably be replaced to match the
	play icon).

	* src/sj-main.c:
	Register and use Sound-Juicer specific stock items for the
	treeview.

	* src/sound-juicer.h:
	Name the stock items.

2005-07-13  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/sj-volume.[ch]:
	Add volume control widget (Ronald Bultje)

	* data/sound-juicer.glade:
	* src/sj-main.c:
	Add volume widget to main window (Ronald)

	* src/sj-play.c:
	Respect the volume control (Ronald) and move some glade calls to
	static variables (me).

2005-07-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Remove the explicit file system backend, it's not needed.

2005-07-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Use Disc instead of CD in the menu.

2005-07-04  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Put the icon in the Track column for now, and force the icon
	size (inspired by a patch from Luca Cavalli).

2005-07-03 Madhan Raj M  <madhanrm@cvs.gnome.org>

	* src/sj-extracting.c: (cleanup), (on_extract_activate)
	Disable play button while extracting.

2005-07-01  Ross Burton  <ross@burtonini.com>

	* autogen.sh:
	Use gnome-common (Ali Akcaagac).

2005-07-01    Madhan Raj M  <madhanrm@cvs.gnome.org>

	* src/sj-extractor.c (sj_extractor_cancel_extract):
	Set the state to NULL when extraction is cancelled.

2005-07-01  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.3.

2005-07-01  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Add just_say_yes() so that gnomevfssink will always overwrite
	files.  At the moment we do this check before starting the
	pipeline so this is safe.

	* src/sj-extracting.c:
	Stop trying to manipulate a non-existant button.

	* src/sj-play.c: