@@ -1,5 +1,15 @@
 2005-07-13  Ross Burton  <ross@burtonini.com>
 
+	* src/sound-juicer.h:
+	* src/sj-main.c:
+	Add a stock item for the Extract button, and re-name the state
+	stock icons.
+
+	* data/sound-juicer.glade:
+	Use the extract stock item.
+
+2005-07-13  Ross Burton  <ross@burtonini.com>
+
 	* data/sj-play.png:
 	* data/sj-record.png:
 	* data/Makefile.am:
